Add .DS_Store to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ mitdk_tokens.json
 mit_dk_tokens.json
 mit_dk_configuration.py
 development/
+.DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
