--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 beautifulsoup4==4.12.2
 chromedriver_autoinstaller==0.4.0
-requests==2.28.1
+python-slugify==8.0.1
+Requests==2.29.0
 selenium==4.9.0
 selenium_wire==5.1.0
